--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "requests (>=2.32.4,<3.0.0)",
     "ollama (>=0.5.1,<0.6.0)",
     "langchain-openai (>=0.3.23,<0.4.0)",
+    "tqdm (>=4.67.1,<5.0.0)",
 ]
 
 [tool.poetry]
