--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ dependencies = [
     "ollama (>=0.5.1,<0.6.0)",
     "langchain-openai (>=0.3.23,<0.4.0)",
     "tqdm (>=4.67.1,<5.0.0)",
+    "pygraphviz (>=1.14,<2.0)",
+    "grandalf (>=0.8,<0.9)",
 ]
 
 [tool.poetry]
