--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ dependencies = [
     "tqdm (>=4.67.1,<5.0.0)",
     "pygraphviz (>=1.14,<2.0)",
     "grandalf (>=0.8,<0.9)",
+    "selenium (>=4.33.0,<5.0.0)",
+    "pillow (>=11.2.1,<12.0.0)",
 ]
 
 [tool.poetry]
