--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,12 @@ dependencies = [
     "grandalf (>=0.8,<0.9)",
     "selenium (>=4.33.0,<5.0.0)",
     "pillow (>=11.2.1,<12.0.0)",
+    "langchain-core (>=0.3.66,<0.4.0)",
+    "sqlalchemy (>=2.0.41,<3.0.0)",
+    "aiosqlite (>=0.21.0,<0.22.0)",
+    "uuid (>=1.30,<2.0)",
+    "shortuuid (>=1.0.13,<2.0.0)",
+    "mysqlclient (>=2.2.7,<3.0.0)",
 ]
 
 [tool.poetry]
